--- a/package.json
+++ b/package.json
@@ -1,51 +1,59 @@
 {
-  "name": "to-do-list",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@reduxjs/toolkit": "^1.9.7",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.126",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-redux": "^8.1.3",
-    "react-router-dom": "^7.9.4",
-    "react-scripts": "5.0.1",
-    "styled-components": "^6.1.19",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "sass": "^1.93.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "todo-react",
+	"version": "0.1.0",
+	"homepage": "https://evgeniia-korolova.github.io/todo-rdx",
+	"private": true,
+	"dependencies": {
+		"@reduxjs/toolkit": "^2.9.1",
+		"@testing-library/dom": "^10.4.1",
+		"@testing-library/jest-dom": "^6.9.1",
+		"@testing-library/react": "^16.3.0",
+		"@testing-library/user-event": "^13.5.0",
+		"@types/jest": "^27.5.2",
+		"@types/node": "^16.18.126",
+		"@types/react": "^19.2.2",
+		"@types/react-dom": "^19.2.2",
+		"react": "^19.2.0",
+		"react-dom": "^19.2.0",
+		"react-redux": "^9.2.0",
+		"react-router-dom": "^7.9.4",
+		"react-scripts": "5.0.1",
+		"styled-components": "^6.1.19",
+		"styled-normalize": "^8.1.1",
+		"typescript": "^4.9.5",
+		"uuid": "^13.0.0",
+		"web-vitals": "^2.1.4"
+	},
+	"devDependencies": {
+		"@types/styled-components": "^5.1.34",
+		"@types/uuid": "^10.0.0",
+		"gh-pages": "^6.3.0",
+		"sass": "^1.93.2"
+	},
+	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": [
+			"react-app",
+			"react-app/jest"
+		]
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	}
 }
